Add drag and drop event

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -25,7 +25,7 @@
         </table>
         
         <div id="drop">Drop file here</div>
-        <p id="output"></p>
+        <pre id="output"></pre>
         
         <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.8.0/xlsx.core.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.3.0/knockout-min.js"></script>
