Extract cell value according to cell address

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -25,6 +25,7 @@
         </table>
         
         <div id="drop">Drop file here</div>
+        <pre id="preview"></pre>
         <pre id="output"></pre>
         
         <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.8.0/xlsx.core.min.js"></script>
