--- a/public_html/index.html
+++ b/public_html/index.html
@@ -19,7 +19,7 @@
                     <th>20.00 - 20.59</th>
                 </tr>
             </thead>
-            <tbody data-bind="foreach: data">
+            <tbody data-bind="foreach: row">
                 <tr>
                     <td data-bind="text: A"></td>
                     <td data-bind="text: B"></td>
