--- a/public_html/index.html
+++ b/public_html/index.html
@@ -20,22 +20,9 @@
                         <th>20.00 - 20.59</th>
                     </tr>
                 </thead>
-                <tbody data-bind="foreach: row">
-                    <tr>
-                        <td data-bind="text: A"></td>
-                        <td data-bind="text: B"></td>
-                        <td data-bind="text: C"></td>
-                        <td data-bind="text: D"></td>
-                        <td data-bind="text: E"></td>
-                        <td data-bind="text: F"></td>
-                        <td data-bind="text: G"></td>
-                        <td data-bind="text: H"></td>
-                        <td data-bind="text: I"></td>
-                        <td data-bind="text: J"></td>
-                        <td data-bind="text: K"></td>
-                        <td data-bind="text: L"></td>
-                        <td data-bind="text: M"></td>
-                        <td data-bind="text: N"></td>
+                <tbody data-bind="foreach: rows">
+                    <tr data-bind="foreach: columns">
+                        <td data-bind="text: text, attr: { colspan: columnSpan }"></td>
                     </tr>
                 </tbody>
             </table>
