--- a/public_html/index.html
+++ b/public_html/index.html
@@ -10,7 +10,7 @@
     <body>
         <div class="subject-list">
             <ul data-bind="foreach: subjects">
-                <li><input data-bind="value: name" /></li>
+                <li><input data-bind="value: name" /><a href="#" data-bind="click: $root.removeSubject">Remove</a></li>
             </ul>
             <button data-bind="click: addSubject">Add subject</button>
             <button data-bind="click: refresh">Refresh</button>
