Remove redundant divider

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -36,10 +36,8 @@
                 </tbody>
             </table>
             
-            <div id="error">
-                <div class="alert alert-warning">
-                    <strong>Warning!</strong> Some of the classes are clashing, or maybe you did not specify the group for certain classes.
-                </div>
+            <div id="error" class="alert alert-warning">
+                <strong>Warning!</strong> Some of the classes are clashing, or maybe you did not specify the group for certain classes.
             </div>
         </div>
         
