--- a/public_html/index.html
+++ b/public_html/index.html
@@ -31,16 +31,13 @@
                         <thead>
                             <tr>
                                 <th>Day</th>
-                                <th>8.00 - 8.59</th><th>9.00 - 9.59</th><th>10.00 - 10.59</th>
-                                <th>11.00 - 11.59</th><th>12.00 - 12.59</th><th>13.00 - 13.59</th>
-                                <th>14.00 - 14.59</th><th>15.00 - 15.59</th><th>16.00 - 16.59</th>
-                                <th>17.00 - 17.59</th><th>18.00 - 18.59</th><th>19.00 - 19.59</th>
-                                <th>20.00 - 20.59</th>
+                                <th>Monday</th><th>Tuesday</th><th>Wednesday</th>
+                                <th>Thursday</th><th>Friday</th>
                             </tr>
                         </thead>
                         <tbody data-bind="foreach: rows">
                             <tr data-bind="foreach: columns">
-                                <td data-bind="text: text, attr: { colspan: columnSpan }"></td>
+                                <td data-bind="text: text, attr: { rowspan: columnSpan }"></td>
                             </tr>
                         </tbody>
                     </table>
