Add dummy text to show current and next class

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -12,6 +12,12 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-3">
+                    <h1>Today</h1>
+                    <h3>Now</h3>
+                    <p id="now">(K) (G4) WIX1002/WXES1116 - AAS - MM6</p>
+                    <h3>Next</h3>
+                    <p id="next">(K) WMES3302 - TH - BT4</p>
+                    <h3>My Subjects</h3>
                     <ul class="list-group" data-bind="foreach: subjects">
                         <li class="list-group-item">
                             <div class="input-group">
