Show time left for next class

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -17,7 +17,7 @@
                     <p id="now" data-bind="text: currentClass"></p>
                     <h3>Next</h3>
                     <p id="next" data-bind="text: nextClass"></p>
-                    <p id="time" data-bind="text: currentTime"></p>
+                    <p id="timeleft" data-bind="text: timeLeft"></p>
                     <h3>My Subjects</h3>
                     <ul class="list-group" data-bind="foreach: subjects">
                         <li class="list-group-item">
@@ -63,6 +63,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/js/bootstrap.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.3.0/knockout-min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.8.0/xlsx.core.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.6/moment.min.js"></script>
         <script src="scripts/main.js"></script>
     </body>
 </html>
