--- a/public_html/index.html
+++ b/public_html/index.html
@@ -5,10 +5,15 @@
         <title>Timetable Organizer</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css" />
-        <link rel="stylesheet" href="stylesheets/style.css" />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster" type="text/css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css">
+        <link rel="stylesheet" href="stylesheets/style.css">
     </head>
     <body>
+        <div id="loading">
+            <span>Loading...</span>
+        </div>
+        
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-3">
