--- a/public_html/index.html
+++ b/public_html/index.html
@@ -12,11 +12,11 @@
     <body>
         <header>
             <div class="site-branding">
-                <h1 class="site-title">My Timetable</h1>
+                <h1 class="site-title"><button class="glyphicon glyphicon-menu-hamburger main-menu-button"></button> My Timetable</h1>
             </div>
             
             <nav>
-                <button class="main-menu-button">Main Menu</button>
+                <!--<button class="main-menu-button">Main Menu</button>-->
                 <div class="main-menu">
                     <ul class="nav nav-pills nav-stacked">
                         <li role="presentation"><a href="#">FSKTM Homepage</a></li>
@@ -37,7 +37,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12 col-md-3">
-                        <div class="green box">
+                        <div class="box">
                             <h2>Today</h2>
                             <h3>Now</h3>
                             <p id="now" data-bind="text: currentClass"></p>
