--- a/public_html/index.html
+++ b/public_html/index.html
@@ -54,7 +54,7 @@
 
                         <div class="panel panel-default panel-hide" id="my-subjects">
                             <div class="panel-heading">
-                                <h3>My Subjects <span class="my-subjects-arrow glyphicon glyphicon-menu-right pull-right"></span></h3>
+                                <h3>My Subjects <span class="arrow glyphicon glyphicon-chevron-right pull-right"></span></h3>
                             </div>
                             <div class="panel-body collapse">
                                 <ul class="list-group" data-bind="foreach: subjects">
