--- a/public_html/index.html
+++ b/public_html/index.html
@@ -49,7 +49,7 @@
                     <div class="col-xs-12 col-md-3">
                         <div class="panel panel-default">
                             <div class="panel-heading">
-                                <h3>Today <small class="text-capitalize" data-bind="text: day"></small></h3>
+                                <h3>Today <small data-bind="text: day"></small></h3>
                             </div>
                             <div class="panel-body">
                                 <h3>Now</h3>
