--- a/public_html/index.html
+++ b/public_html/index.html
@@ -29,7 +29,7 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="http://www.fsktm.um.edu.my/">FSKTM Homepage</a></li>
                         <li><a href="https://github.com/burhanloey/MyTimetable">Contribute</a></li>
-                        <li><a href="#">About</a></li>
+                        <li><a href="#" data-toggle="modal" data-target="#about-modal">About</a></li>
                     </ul>
                 </div>
             </div>
@@ -102,6 +102,21 @@
                                     </tr>
                                 </tbody>
                             </table>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="modal fade" id="about-modal">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
+                                <h3 class="modal-title">My Timetable</h3>
+                            </div>
+                            <div class="modal-body">
+                                <p>Version 1.0.0</p>
+                                <p>Author: Burhanuddin bin Baharuddin</p>
+                            </div>
                         </div>
                     </div>
                 </div>
