--- a/public_html/index.html
+++ b/public_html/index.html
@@ -60,7 +60,7 @@
                             </div>
                         </div>
 
-                        <div class="panel panel-default panel-hide" id="my-subjects">
+                        <div class="panel panel-default panel-hide" id="my-subjects-panel">
                             <div class="panel-heading">
                                 <h3>My Subjects <span class="arrow glyphicon glyphicon-chevron-right pull-right"></span></h3>
                             </div>
